@@ -4,246 +4,246 @@ import java.util.Optional;
 import java.util.OptionalInt;
 
 public class rs {
-   public static final akj<eax<?, ?>> a = rn.a("crimson_fungus");
-   public static final akj<eax<?, ?>> b = rn.a("crimson_fungus_planted");
-   public static final akj<eax<?, ?>> c = rn.a("warped_fungus");
-   public static final akj<eax<?, ?>> d = rn.a("warped_fungus_planted");
-   public static final akj<eax<?, ?>> e = rn.a("huge_brown_mushroom");
-   public static final akj<eax<?, ?>> f = rn.a("huge_red_mushroom");
-   public static final akj<eax<?, ?>> g = rn.a("oak");
-   public static final akj<eax<?, ?>> h = rn.a("dark_oak");
-   public static final akj<eax<?, ?>> i = rn.a("birch");
-   public static final akj<eax<?, ?>> j = rn.a("acacia");
-   public static final akj<eax<?, ?>> k = rn.a("spruce");
-   public static final akj<eax<?, ?>> l = rn.a("pine");
-   public static final akj<eax<?, ?>> m = rn.a("jungle_tree");
-   public static final akj<eax<?, ?>> n = rn.a("fancy_oak");
-   public static final akj<eax<?, ?>> o = rn.a("jungle_tree_no_vine");
-   public static final akj<eax<?, ?>> p = rn.a("mega_jungle_tree");
-   public static final akj<eax<?, ?>> q = rn.a("mega_spruce");
-   public static final akj<eax<?, ?>> r = rn.a("mega_pine");
-   public static final akj<eax<?, ?>> s = rn.a("super_birch_bees_0002");
-   public static final akj<eax<?, ?>> t = rn.a("super_birch_bees");
-   public static final akj<eax<?, ?>> u = rn.a("swamp_oak");
-   public static final akj<eax<?, ?>> v = rn.a("jungle_bush");
-   public static final akj<eax<?, ?>> w = rn.a("azalea_tree");
-   public static final akj<eax<?, ?>> x = rn.a("mangrove");
-   public static final akj<eax<?, ?>> y = rn.a("tall_mangrove");
-   public static final akj<eax<?, ?>> z = rn.a("cherry");
-   public static final akj<eax<?, ?>> A = rn.a("oak_bees_0002");
-   public static final akj<eax<?, ?>> B = rn.a("oak_bees_002");
-   public static final akj<eax<?, ?>> C = rn.a("oak_bees_005");
-   public static final akj<eax<?, ?>> D = rn.a("birch_bees_0002");
-   public static final akj<eax<?, ?>> E = rn.a("birch_bees_002");
-   public static final akj<eax<?, ?>> F = rn.a("birch_bees_005");
-   public static final akj<eax<?, ?>> G = rn.a("fancy_oak_bees_0002");
-   public static final akj<eax<?, ?>> H = rn.a("fancy_oak_bees_002");
-   public static final akj<eax<?, ?>> I = rn.a("fancy_oak_bees_005");
-   public static final akj<eax<?, ?>> J = rn.a("fancy_oak_bees");
-   public static final akj<eax<?, ?>> K = rn.a("cherry_bees_005");
+   public static final akj<eay<?, ?>> a = rn.a("crimson_fungus");
+   public static final akj<eay<?, ?>> b = rn.a("crimson_fungus_planted");
+   public static final akj<eay<?, ?>> c = rn.a("warped_fungus");
+   public static final akj<eay<?, ?>> d = rn.a("warped_fungus_planted");
+   public static final akj<eay<?, ?>> e = rn.a("huge_brown_mushroom");
+   public static final akj<eay<?, ?>> f = rn.a("huge_red_mushroom");
+   public static final akj<eay<?, ?>> g = rn.a("oak");
+   public static final akj<eay<?, ?>> h = rn.a("dark_oak");
+   public static final akj<eay<?, ?>> i = rn.a("birch");
+   public static final akj<eay<?, ?>> j = rn.a("acacia");
+   public static final akj<eay<?, ?>> k = rn.a("spruce");
+   public static final akj<eay<?, ?>> l = rn.a("pine");
+   public static final akj<eay<?, ?>> m = rn.a("jungle_tree");
+   public static final akj<eay<?, ?>> n = rn.a("fancy_oak");
+   public static final akj<eay<?, ?>> o = rn.a("jungle_tree_no_vine");
+   public static final akj<eay<?, ?>> p = rn.a("mega_jungle_tree");
+   public static final akj<eay<?, ?>> q = rn.a("mega_spruce");
+   public static final akj<eay<?, ?>> r = rn.a("mega_pine");
+   public static final akj<eay<?, ?>> s = rn.a("super_birch_bees_0002");
+   public static final akj<eay<?, ?>> t = rn.a("super_birch_bees");
+   public static final akj<eay<?, ?>> u = rn.a("swamp_oak");
+   public static final akj<eay<?, ?>> v = rn.a("jungle_bush");
+   public static final akj<eay<?, ?>> w = rn.a("azalea_tree");
+   public static final akj<eay<?, ?>> x = rn.a("mangrove");
+   public static final akj<eay<?, ?>> y = rn.a("tall_mangrove");
+   public static final akj<eay<?, ?>> z = rn.a("cherry");
+   public static final akj<eay<?, ?>> A = rn.a("oak_bees_0002");
+   public static final akj<eay<?, ?>> B = rn.a("oak_bees_002");
+   public static final akj<eay<?, ?>> C = rn.a("oak_bees_005");
+   public static final akj<eay<?, ?>> D = rn.a("birch_bees_0002");
+   public static final akj<eay<?, ?>> E = rn.a("birch_bees_002");
+   public static final akj<eay<?, ?>> F = rn.a("birch_bees_005");
+   public static final akj<eay<?, ?>> G = rn.a("fancy_oak_bees_0002");
+   public static final akj<eay<?, ?>> H = rn.a("fancy_oak_bees_002");
+   public static final akj<eay<?, ?>> I = rn.a("fancy_oak_bees_005");
+   public static final akj<eay<?, ?>> J = rn.a("fancy_oak_bees");
+   public static final akj<eay<?, ?>> K = rn.a("cherry_bees_005");
 
-   private static eek.a a(dfh $$0, dfh $$1, int $$2, int $$3, int $$4, int $$5) {
-      return new eek.a(efp.a($$0), new egr($$2, $$3, $$4), efp.a($$1), new eev(bpi.a($$5), bpi.a(0), 3), new ees(1, 0, 1));
+   private static eel.a a(dfi $$0, dfi $$1, int $$2, int $$3, int $$4, int $$5) {
+      return new eel.a(efq.a($$0), new egs($$2, $$3, $$4), efq.a($$1), new eew(bpj.a($$5), bpj.a(0), 3), new eet(1, 0, 1));
    }
 
-   private static eek.a a() {
-      return a(dfj.U, dfj.aE, 4, 2, 0, 2).a();
+   private static eel.a a() {
+      return a(dfk.U, dfk.aE, 4, 2, 0, 2).a();
    }
 
-   private static eek.a b() {
-      return a(dfj.W, dfj.aG, 5, 2, 0, 2).a();
+   private static eel.a b() {
+      return a(dfk.W, dfk.aG, 5, 2, 0, 2).a();
    }
 
-   private static eek.a c() {
-      return a(dfj.W, dfj.aG, 5, 2, 6, 2).a();
+   private static eel.a c() {
+      return a(dfk.W, dfk.aG, 5, 2, 6, 2).a();
    }
 
-   private static eek.a d() {
-      return a(dfj.X, dfj.aH, 4, 8, 0, 2);
+   private static eel.a d() {
+      return a(dfk.X, dfk.aH, 4, 8, 0, 2);
    }
 
-   private static eek.a e() {
-      return new eek.a(efp.a(dfj.U), new egn(3, 11, 0), efp.a(dfj.aE), new eez(bpi.a(2), bpi.a(4), 4), new ees(0, 0, 0, OptionalInt.of(4))).a();
+   private static eel.a e() {
+      return new eel.a(efq.a(dfk.U), new ego(3, 11, 0), efq.a(dfk.aE), new efa(bpj.a(2), bpj.a(4), 4), new eet(0, 0, 0, OptionalInt.of(4))).a();
    }
 
-   private static eek.a f() {
-      return new eek.a(
-            efp.a(dfj.Z),
-            new egl(7, 1, 0, new bps(boq.<bpl>a().a(bpi.a(1), 1).a(bpi.a(2), 1).a(bpi.a(3), 1).a()), bpr.a(2, 4), bpr.a(-4, -3), bpr.a(-1, 0)),
-            efp.a(dfj.aJ),
-            new eex(bpi.a(4), bpi.a(0), bpi.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
-            new ees(1, 0, 2)
+   private static eel.a f() {
+      return new eel.a(
+            efq.a(dfk.Z),
+            new egm(7, 1, 0, new bpt(bor.<bpm>a().a(bpj.a(1), 1).a(bpj.a(2), 1).a(bpj.a(3), 1).a()), bps.a(2, 4), bps.a(-4, -3), bps.a(-1, 0)),
+            efq.a(dfk.aJ),
+            new eey(bpj.a(4), bpj.a(0), bpj.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
+            new eet(1, 0, 2)
          )
          .a();
    }
 
-   public static void a(qm<eax<?, ?>> $$0) {
-      jk<dfh> $$1 = $$0.a(lr.f);
-      dzm $$2 = dzm.a(
-         dfj.x,
-         dfj.y,
-         dfj.z,
-         dfj.A,
-         dfj.B,
-         dfj.C,
-         dfj.D,
-         dfj.E,
-         dfj.bR,
-         dfj.bS,
-         dfj.bT,
-         dfj.bU,
-         dfj.bV,
-         dfj.bW,
-         dfj.bX,
-         dfj.bY,
-         dfj.bZ,
-         dfj.ca,
-         dfj.cb,
-         dfj.cc,
-         dfj.cd,
-         dfj.ce,
-         dfj.cf,
-         dfj.cg,
-         dfj.cB,
-         dfj.dS,
-         dfj.fb,
-         dfj.fc,
-         dfj.fd,
-         dfj.fe,
-         dfj.fm,
-         dfj.fq,
-         dfj.fC,
-         dfj.gt,
-         dfj.gu,
-         dfj.ku,
-         dfj.kv,
-         dfj.kA,
-         dfj.kB,
-         dfj.kD,
-         dfj.oi,
-         dfj.oo,
-         dfj.ox,
-         dfj.oz,
-         dfj.oA,
-         dfj.oB,
-         dfj.oC,
-         dfj.sv,
-         dfj.sw,
-         dfj.sx,
-         dfj.sy,
-         dfj.sz,
-         dfj.sA,
-         dfj.sB,
-         dfj.sD,
-         dfj.sE,
-         dfj.sF
+   public static void a(qm<eay<?, ?>> $$0) {
+      jk<dfi> $$1 = $$0.a(lr.f);
+      dzn $$2 = dzn.a(
+         dfk.x,
+         dfk.y,
+         dfk.z,
+         dfk.A,
+         dfk.B,
+         dfk.C,
+         dfk.D,
+         dfk.E,
+         dfk.bR,
+         dfk.bS,
+         dfk.bT,
+         dfk.bU,
+         dfk.bV,
+         dfk.bW,
+         dfk.bX,
+         dfk.bY,
+         dfk.bZ,
+         dfk.ca,
+         dfk.cb,
+         dfk.cc,
+         dfk.cd,
+         dfk.ce,
+         dfk.cf,
+         dfk.cg,
+         dfk.cB,
+         dfk.dS,
+         dfk.fb,
+         dfk.fc,
+         dfk.fd,
+         dfk.fe,
+         dfk.fm,
+         dfk.fq,
+         dfk.fC,
+         dfk.gt,
+         dfk.gu,
+         dfk.ku,
+         dfk.kv,
+         dfk.kA,
+         dfk.kB,
+         dfk.kD,
+         dfk.oi,
+         dfk.oo,
+         dfk.ox,
+         dfk.oz,
+         dfk.oA,
+         dfk.oB,
+         dfk.oC,
+         dfk.sv,
+         dfk.sw,
+         dfk.sx,
+         dfk.sy,
+         dfk.sz,
+         dfk.sA,
+         dfk.sB,
+         dfk.sD,
+         dfk.sE,
+         dfk.sF
       );
-      rn.a($$0, a, ebk.U, new ebt(dfj.ow.o(), dfj.os.o(), dfj.kK.o(), dfj.oy.o(), $$2, false));
-      rn.a($$0, b, ebk.U, new ebt(dfj.ow.o(), dfj.os.o(), dfj.kK.o(), dfj.oy.o(), $$2, true));
-      rn.a($$0, c, ebk.U, new ebt(dfj.on.o(), dfj.oj.o(), dfj.op.o(), dfj.oy.o(), $$2, false));
-      rn.a($$0, d, ebk.U, new ebt(dfj.on.o(), dfj.oj.o(), dfj.op.o(), dfj.oy.o(), $$2, true));
+      rn.a($$0, a, ebl.U, new ebu(dfk.ow.o(), dfk.os.o(), dfk.kK.o(), dfk.oy.o(), $$2, false));
+      rn.a($$0, b, ebl.U, new ebu(dfk.ow.o(), dfk.os.o(), dfk.kK.o(), dfk.oy.o(), $$2, true));
+      rn.a($$0, c, ebl.U, new ebu(dfk.on.o(), dfk.oj.o(), dfk.op.o(), dfk.oy.o(), $$2, false));
+      rn.a($$0, d, ebl.U, new ebu(dfk.on.o(), dfk.oj.o(), dfk.op.o(), dfk.oy.o(), $$2, true));
       rn.a(
          $$0,
          e,
-         ebk.r,
-         new edq(
-            efp.a(dfj.eT.o().a(dje.f, Boolean.valueOf(true)).a(dje.g, Boolean.valueOf(false))),
-            efp.a(dfj.eV.o().a(dje.f, Boolean.valueOf(false)).a(dje.g, Boolean.valueOf(false))),
+         ebl.r,
+         new edr(
+            efq.a(dfk.eT.o().a(djf.f, Boolean.valueOf(true)).a(djf.g, Boolean.valueOf(false))),
+            efq.a(dfk.eV.o().a(djf.f, Boolean.valueOf(false)).a(djf.g, Boolean.valueOf(false))),
             3
          )
       );
       rn.a(
          $$0,
          f,
-         ebk.q,
-         new edq(efp.a(dfj.eU.o().a(dje.g, Boolean.valueOf(false))), efp.a(dfj.eV.o().a(dje.f, Boolean.valueOf(false)).a(dje.g, Boolean.valueOf(false))), 2)
+         ebl.q,
+         new edr(efq.a(dfk.eU.o().a(djf.g, Boolean.valueOf(false))), efq.a(dfk.eV.o().a(djf.f, Boolean.valueOf(false)).a(djf.g, Boolean.valueOf(false))), 2)
       );
-      egd $$3 = new egd(0.002F);
-      egd $$4 = new egd(0.01F);
-      egd $$5 = new egd(0.02F);
-      egd $$6 = new egd(0.05F);
-      egd $$7 = new egd(1.0F);
-      rn.a($$0, g, ebk.f, a().c());
+      ege $$3 = new ege(0.002F);
+      ege $$4 = new ege(0.01F);
+      ege $$5 = new ege(0.02F);
+      ege $$6 = new ege(0.05F);
+      ege $$7 = new ege(1.0F);
+      rn.a($$0, g, ebl.f, a().c());
       rn.a(
          $$0,
          h,
-         ebk.f,
-         new eek.a(efp.a(dfj.aa), new egm(6, 2, 1), efp.a(dfj.aK), new eey(bpi.a(0), bpi.a(0)), new eer(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
+         ebl.f,
+         new eel.a(efq.a(dfk.aa), new egn(6, 2, 1), efq.a(dfk.aK), new eez(bpj.a(0), bpj.a(0)), new ees(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
       );
-      rn.a($$0, i, ebk.f, b().c());
-      rn.a($$0, j, ebk.f, new eek.a(efp.a(dfj.Y), new ego(5, 2, 2), efp.a(dfj.aI), new eeu(bpi.a(2), bpi.a(0)), new ees(1, 0, 2)).a().c());
-      rn.a($$0, z, ebk.f, f().c());
-      rn.a($$0, K, ebk.f, f().a(List.of($$6)).c());
-      rn.a($$0, k, ebk.f, new eek.a(efp.a(dfj.V), new egr(5, 2, 1), efp.a(dfj.aF), new efg(bpr.a(2, 3), bpr.a(0, 2), bpr.a(1, 2)), new ees(2, 0, 2)).a().c());
-      rn.a($$0, l, ebk.f, new eek.a(efp.a(dfj.V), new egr(6, 4, 0), efp.a(dfj.aF), new efe(bpi.a(1), bpi.a(1), bpr.a(3, 4)), new ees(2, 0, 2)).a().c());
-      rn.a($$0, m, ebk.f, d().a(ImmutableList.of(new ege(0.2F), egi.b, new egf(0.25F))).a().c());
-      rn.a($$0, n, ebk.f, e().c());
-      rn.a($$0, o, ebk.f, d().a().c());
+      rn.a($$0, i, ebl.f, b().c());
+      rn.a($$0, j, ebl.f, new eel.a(efq.a(dfk.Y), new egp(5, 2, 2), efq.a(dfk.aI), new eev(bpj.a(2), bpj.a(0)), new eet(1, 0, 2)).a().c());
+      rn.a($$0, z, ebl.f, f().c());
+      rn.a($$0, K, ebl.f, f().a(List.of($$6)).c());
+      rn.a($$0, k, ebl.f, new eel.a(efq.a(dfk.V), new egs(5, 2, 1), efq.a(dfk.aF), new efh(bps.a(2, 3), bps.a(0, 2), bps.a(1, 2)), new eet(2, 0, 2)).a().c());
+      rn.a($$0, l, ebl.f, new eel.a(efq.a(dfk.V), new egs(6, 4, 0), efq.a(dfk.aF), new eff(bpj.a(1), bpj.a(1), bps.a(3, 4)), new eet(2, 0, 2)).a().c());
+      rn.a($$0, m, ebl.f, d().a(ImmutableList.of(new egf(0.2F), egj.b, new egg(0.25F))).a().c());
+      rn.a($$0, n, ebl.f, e().c());
+      rn.a($$0, o, ebl.f, d().a().c());
       rn.a(
          $$0,
          p,
-         ebk.f,
-         new eek.a(efp.a(dfj.X), new egq(10, 2, 19), efp.a(dfj.aH), new efc(bpi.a(2), bpi.a(0), 2), new ees(1, 1, 2))
-            .a(ImmutableList.of(egi.b, new egf(0.25F)))
+         ebl.f,
+         new eel.a(efq.a(dfk.X), new egr(10, 2, 19), efq.a(dfk.aH), new efd(bpj.a(2), bpj.a(0), 2), new eet(1, 1, 2))
+            .a(ImmutableList.of(egj.b, new egg(0.25F)))
             .c()
       );
       rn.a(
          $$0,
          q,
-         ebk.f,
-         new eek.a(efp.a(dfj.V), new egp(13, 2, 14), efp.a(dfj.aF), new efd(bpi.a(0), bpi.a(0), bpr.a(13, 17)), new ees(1, 1, 2))
-            .a(ImmutableList.of(new egb(efp.a(dfj.l))))
+         ebl.f,
+         new eel.a(efq.a(dfk.V), new egq(13, 2, 14), efq.a(dfk.aF), new efe(bpj.a(0), bpj.a(0), bps.a(13, 17)), new eet(1, 1, 2))
+            .a(ImmutableList.of(new egc(efq.a(dfk.l))))
             .c()
       );
       rn.a(
          $$0,
          r,
-         ebk.f,
-         new eek.a(efp.a(dfj.V), new egp(13, 2, 14), efp.a(dfj.aF), new efd(bpi.a(0), bpi.a(0), bpr.a(3, 7)), new ees(1, 1, 2))
-            .a(ImmutableList.of(new egb(efp.a(dfj.l))))
+         ebl.f,
+         new eel.a(efq.a(dfk.V), new egq(13, 2, 14), efq.a(dfk.aF), new efe(bpj.a(0), bpj.a(0), bps.a(3, 7)), new eet(1, 1, 2))
+            .a(ImmutableList.of(new egc(efq.a(dfk.l))))
             .c()
       );
-      rn.a($$0, s, ebk.f, c().a(ImmutableList.of($$3)).c());
-      rn.a($$0, t, ebk.f, c().a(ImmutableList.of($$7)).c());
-      rn.a($$0, u, ebk.f, a(dfj.U, dfj.aE, 5, 3, 0, 3).a(ImmutableList.of(new egf(0.25F))).c());
-      rn.a($$0, v, ebk.f, new eek.a(efp.a(dfj.X), new egr(1, 0, 0), efp.a(dfj.aE), new eew(bpi.a(2), bpi.a(1), 2), new ees(0, 0, 0)).c());
+      rn.a($$0, s, ebl.f, c().a(ImmutableList.of($$3)).c());
+      rn.a($$0, t, ebl.f, c().a(ImmutableList.of($$7)).c());
+      rn.a($$0, u, ebl.f, a(dfk.U, dfk.aE, 5, 3, 0, 3).a(ImmutableList.of(new egg(0.25F))).c());
+      rn.a($$0, v, ebl.f, new eel.a(efq.a(dfk.X), new egs(1, 0, 0), efq.a(dfk.aE), new eex(bpj.a(2), bpj.a(1), 2), new eet(0, 0, 0)).c());
       rn.a(
          $$0,
          w,
-         ebk.f,
-         new eek.a(
-               efp.a(dfj.U),
-               new egk(4, 2, 0, 3, bpr.a(1, 2)),
-               new efz(boq.<dsk>a().a(dfj.aM.o(), 3).a(dfj.aN.o(), 1)),
-               new eff(bpi.a(3), bpi.a(0), bpi.a(2), 50),
-               new ees(1, 0, 1)
+         ebl.f,
+         new eel.a(
+               efq.a(dfk.U),
+               new egl(4, 2, 0, 3, bps.a(1, 2)),
+               new ega(bor.<dsl>a().a(dfk.aM.o(), 3).a(dfk.aN.o(), 1)),
+               new efg(bpj.a(3), bpj.a(0), bpj.a(2), 50),
+               new eet(1, 0, 1)
             )
-            .a(efp.a(dfj.sH))
+            .a(efq.a(dfk.sH))
             .b()
             .c()
       );
       rn.a(
          $$0,
          x,
-         ebk.f,
-         new eek.a(
-               efp.a(dfj.ab),
-               new egu(2, 1, 4, bpr.a(1, 4), 0.5F, bpr.a(0, 1), $$1.b(avw.cj)),
-               efp.a(dfj.aL),
-               new eff(bpi.a(3), bpi.a(0), bpi.a(2), 70),
+         ebl.f,
+         new eel.a(
+               efq.a(dfk.ab),
+               new egv(2, 1, 4, bps.a(1, 4), 0.5F, bps.a(0, 1), $$1.b(avw.cj)),
+               efq.a(dfk.aL),
+               new efg(bpj.a(3), bpj.a(0), bpj.a(2), 70),
                Optional.of(
-                  new efl(
-                     bpr.a(1, 3),
-                     efp.a(dfj.ac),
-                     Optional.of(new efj(efp.a(dfj.sA), 0.5F)),
-                     new efk($$1.b(avw.ck), jn.a(dfh::s, dfj.sI, dfj.ad), efp.a(dfj.ad), 8, 15, 0.2F)
+                  new efm(
+                     bps.a(1, 3),
+                     efq.a(dfk.ac),
+                     Optional.of(new efk(efq.a(dfk.sA), 0.5F)),
+                     new efl($$1.b(avw.ck), jn.a(dfi::s, dfk.sI, dfk.ad), efq.a(dfk.ad), 8, 15, 0.2F)
                   )
                ),
-               new ees(2, 0, 2)
+               new eet(2, 0, 2)
             )
             .a(
                List.of(
-                  new egf(0.125F), new egc(0.14F, 1, 0, new efv(efp.a(dfj.E.o().a(dkc.d, Boolean.valueOf(true))), dkc.b, bpr.a(0, 4)), 2, List.of(jf.a)), $$4
+                  new egg(0.125F), new egd(0.14F, 1, 0, new efw(efq.a(dfk.E.o().a(dkd.d, Boolean.valueOf(true))), dkd.b, bps.a(0, 4)), 2, List.of(jf.a)), $$4
                )
             )
             .a()
@@ -252,39 +252,39 @@ public class rs {
       rn.a(
          $$0,
          y,
-         ebk.f,
-         new eek.a(
-               efp.a(dfj.ab),
-               new egu(4, 1, 9, bpr.a(1, 6), 0.5F, bpr.a(0, 1), $$1.b(avw.cj)),
-               efp.a(dfj.aL),
-               new eff(bpi.a(3), bpi.a(0), bpi.a(2), 70),
+         ebl.f,
+         new eel.a(
+               efq.a(dfk.ab),
+               new egv(4, 1, 9, bps.a(1, 6), 0.5F, bps.a(0, 1), $$1.b(avw.cj)),
+               efq.a(dfk.aL),
+               new efg(bpj.a(3), bpj.a(0), bpj.a(2), 70),
                Optional.of(
-                  new efl(
-                     bpr.a(3, 7),
-                     efp.a(dfj.ac),
-                     Optional.of(new efj(efp.a(dfj.sA), 0.5F)),
-                     new efk($$1.b(avw.ck), jn.a(dfh::s, dfj.sI, dfj.ad), efp.a(dfj.ad), 8, 15, 0.2F)
+                  new efm(
+                     bps.a(3, 7),
+                     efq.a(dfk.ac),
+                     Optional.of(new efk(efq.a(dfk.sA), 0.5F)),
+                     new efl($$1.b(avw.ck), jn.a(dfi::s, dfk.sI, dfk.ad), efq.a(dfk.ad), 8, 15, 0.2F)
                   )
                ),
-               new ees(3, 0, 2)
+               new eet(3, 0, 2)
             )
             .a(
                List.of(
-                  new egf(0.125F), new egc(0.14F, 1, 0, new efv(efp.a(dfj.E.o().a(dkc.d, Boolean.valueOf(true))), dkc.b, bpr.a(0, 4)), 2, List.of(jf.a)), $$4
+                  new egg(0.125F), new egd(0.14F, 1, 0, new efw(efq.a(dfk.E.o().a(dkd.d, Boolean.valueOf(true))), dkd.b, bps.a(0, 4)), 2, List.of(jf.a)), $$4
                )
             )
             .a()
             .c()
       );
-      rn.a($$0, A, ebk.f, a().a(List.of($$3)).c());
-      rn.a($$0, B, ebk.f, a().a(List.of($$5)).c());
-      rn.a($$0, C, ebk.f, a().a(List.of($$6)).c());
-      rn.a($$0, D, ebk.f, b().a(List.of($$3)).c());
-      rn.a($$0, E, ebk.f, b().a(List.of($$5)).c());
-      rn.a($$0, F, ebk.f, b().a(List.of($$6)).c());
-      rn.a($$0, G, ebk.f, e().a(List.of($$3)).c());
-      rn.a($$0, H, ebk.f, e().a(List.of($$5)).c());
-      rn.a($$0, I, ebk.f, e().a(List.of($$6)).c());
-      rn.a($$0, J, ebk.f, e().a(List.of($$7)).c());
+      rn.a($$0, A, ebl.f, a().a(List.of($$3)).c());
+      rn.a($$0, B, ebl.f, a().a(List.of($$5)).c());
+      rn.a($$0, C, ebl.f, a().a(List.of($$6)).c());
+      rn.a($$0, D, ebl.f, b().a(List.of($$3)).c());
+      rn.a($$0, E, ebl.f, b().a(List.of($$5)).c());
+      rn.a($$0, F, ebl.f, b().a(List.of($$6)).c());
+      rn.a($$0, G, ebl.f, e().a(List.of($$3)).c());
+      rn.a($$0, H, ebl.f, e().a(List.of($$5)).c());
+      rn.a($$0, I, ebl.f, e().a(List.of($$6)).c());
+      rn.a($$0, J, ebl.f, e().a(List.of($$7)).c());
    }
 }
